--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="author" content="SHANDY SISWANDI" />
     <meta name="description" content="SHANDY SISWANDI RESUME || PORTFOLIO" />
 
-    <link rel="shortcut icon" href="assets/images/icon.png" type="image/png">
+    <link rel="shortcut icon" href="assets/img/icon.png" type="image/png">
     <link rel="stylesheet" type="text/css" href="assets/styles/style.css" />
 
     <title>SHANDY SISWANDI</title>
@@ -33,7 +33,7 @@
                     <div class="sidebar box shadow pb-0 sticky-column">
                         <svg class="avatar avatar--180" viewBox="0 0 100 100">
                             <g class="avatar__box">
-                                <image xlink:href="assets/images/my.jpg" height="100%" width="100%" />
+                                <image xlink:href="assets/img/my.jpg" height="100%" width="100%" />
                             </g>
                         </svg>
                         <div class="text-center">
