--- a/index.html
+++ b/index.html
@@ -28,7 +28,6 @@
     <main class="main">
         <div class="container gutter-top">
             <div class="row sticky-parent">
-
                 <aside class="col-12 col-md-12 col-xl-3">
                     <div class="sidebar box shadow pb-0 sticky-column">
                         <svg class="avatar avatar--180" viewBox="0 0 100 100">
@@ -85,9 +84,10 @@
                         <!-- About -->
                         <div class="pb-0 pb-sm-2">
                             <h1 class="title title--h1 title__separate">About Me</h1>
-                            <p>I'm Creative Director and UI/UX Designer from Sydney, Australia, working in web
-                                development and print media. I enjoy turning complex problems into simple, beautiful and
-                                intuitive designs.</p>
+                            <p>
+                                I am 23 years old in 2019 from Indonesia. I am a graduate of Technical Information at
+                                Dian Nuswantoro University Semarang.
+                            </p>
                             <p>My job is to build your website so that it is functional and user-friendly but at the
                                 same time attractive. Moreover, I add personal touch to your product and make sure that
                                 is eye-catching and easy to use. My aim is to bring across your message and identity in
@@ -328,7 +328,6 @@
                             </div>
                         </div>
                     </div>
-
                     <footer class="footer">© 2019 SHANDY SISWANDI</footer>
                 </div>
             </div>
