--- a/index.html
+++ b/index.html
@@ -86,12 +86,13 @@
                             <h1 class="title title--h1 title__separate">About Me</h1>
                             <p>
                                 I am 23 years old in 2019 from Indonesia. I am a graduate of Technical Information at
-                                Dian Nuswantoro University Semarang.
+                                Dian Nuswantoro University Semarang. I am very interested in the new programming
+                                language, and I like to dig deeper into the programming language.
                             </p>
-                            <p>My job is to build your website so that it is functional and user-friendly but at the
-                                same time attractive. Moreover, I add personal touch to your product and make sure that
-                                is eye-catching and easy to use. My aim is to bring across your message and identity in
-                                the most creative way. I created web design for many famous brand companies.</p>
+                            <p>
+                                I knew the programming language in 2014, the first programming language I learned was
+                                visual basic.
+                            </p>
                         </div>
 
                         <!-- What -->
