--- a/index.html
+++ b/index.html
@@ -91,7 +91,9 @@
                             </p>
                             <p>
                                 I knew the programming language in 2014, the first programming language I learned was
-                                visual basic.
+                                visual basic. In 2015 I learned many programming languages such as C, C#, Python, Java,
+                                PHP (HTML+CSS) and Javascript. Now i prefer the php (Framework) and javascript
+                                (Framework) programming languages for work.
                             </p>
                         </div>
 
