--- a/index.html
+++ b/index.html
@@ -87,10 +87,8 @@
                             <p>
                                 I am 23 years old in 2019 from Indonesia. I am a graduate of Technical Information at
                                 Dian Nuswantoro University Semarang. I am very interested in the new programming
-                                language, and I like to dig deeper into the programming language.
-                            </p>
-                            <p>
-                                I knew the programming language in 2014, the first programming language I learned was
+                                language, and I like to dig deeper into the programming language. I knew the programming
+                                language in 2014, the first programming language I learned was
                                 visual basic. In 2015 I learned many programming languages such as C, C#, Python, Java,
                                 PHP (HTML+CSS) and Javascript. Now i prefer the php (Framework) and javascript
                                 (Framework) programming languages for work.
