--- a/index.html
+++ b/index.html
@@ -38,7 +38,9 @@
                         <div class="text-center">
                             <h3 class="title title--h3 sidebar__user-name"><span class="weight--500">SHANDY</span>
                                 SISWANDI</h3>
-                            <div class="badge badge--light">Backend Programmer</div>
+                            <div class="badge badge--light">Backend Developer</div>
+                            <hr class="m-1 p-0 bg-white border-0">
+                            <div class="badge badge--light">Fullstack Developer</div>
 
                             <div class="social">
                                 <a class="social__link" href="https://www.facebook.com/shandysiswandi">
@@ -84,7 +86,7 @@
                         <!-- About -->
                         <div class="pb-0 pb-sm-2">
                             <h1 class="title title--h1 title__separate">About Me</h1>
-                            <p>
+                            <p class="text-justify">
                                 I am 23 years old in 2019 from Indonesia. I am a graduate of Technical Information at
                                 Dian Nuswantoro University Semarang. I am very interested in the new programming
                                 language, and I like to dig deeper into the programming language. I knew the programming
@@ -99,25 +101,25 @@
                         <div class="box-inner pb-0">
                             <h2 class="title title--h3">What I'm Doing</h2>
                             <div class="row">
-
                                 <div class="col-12 col-lg-6">
                                     <div class="case-item box box__second">
                                         <img class="case-item__icon" src="assets/icons/icon-dev.svg" alt="" />
                                         <div>
                                             <h3 class="title title--h5">Web Development</h3>
-                                            <p class="case-item__caption">High-quality development of sites at the
-                                                professional level.</p>
+                                            <p class="case-item__caption">
+                                                High-quality development of sites at the professional level.
+                                            </p>
                                         </div>
                                     </div>
                                 </div>
-
                                 <div class="col-12 col-lg-6">
                                     <div class="case-item box box__second">
                                         <img class="case-item__icon" src="assets/icons/icon-app.svg" alt="" />
                                         <div>
                                             <h3 class="title title--h5">Mobile Apps</h3>
-                                            <p class="case-item__caption">Professional development of applications for
-                                                iOS and Android.</p>
+                                            <p class="case-item__caption">
+                                                Professional development of applications for Android.
+                                            </p>
                                         </div>
                                     </div>
                                 </div>
@@ -135,32 +137,41 @@
                                     <h2 class="title title--h3"><img class="title-icon"
                                             src="assets/icons/icon-education.svg" alt="" /> Education</h2>
                                     <div class="timeline">
-                                        <!-- Item -->
                                         <article class="timeline__item">
-                                            <h5 class="title title--h5 timeline__title">University School of the Arts
+                                            <h5 class="title title--h5 timeline__title">
+                                                University Dian Nuswantoro of Semarang
                                             </h5>
-                                            <span class="timeline__period">2007 — 2009</span>
-                                            <p class="timeline__description">Nemo enims ipsam voluptatem, blanditiis
-                                                praesentium voluptum delenit atque corrupti, quos dolores et quas
-                                                molestias exceptur.</p>
+                                            <span class="timeline__period">2015 — 2019</span>
+                                            <p class="timeline__description">
+                                                at this university I majored in informatics engineering.
+                                            </p>
                                         </article>
 
-                                        <!-- Item -->
                                         <article class="timeline__item">
-                                            <h5 class="title title--h5 timeline__title">New York Academy of Art</h5>
-                                            <span class="timeline__period">2005 — 2007</span>
-                                            <p class="timeline__description">Ratione voluptatem sequi nesciunt, facere
-                                                quisquams facere menda ossimus, omnis voluptas assumenda est omnis..</p>
+                                            <h5 class="title title--h5 timeline__title">SMK N 1 Ampelgading of Pemalang
+                                            </h5>
+                                            <span class="timeline__period">2012 — 2015</span>
+                                            <p class="timeline__description">
+                                                at this school I majored in architecture.
+                                            </p>
                                         </article>
 
-                                        <!-- Item -->
                                         <article class="timeline__item">
-                                            <h5 class="title title--h5 timeline__title">High School of Art and Design
+                                            <h5 class="title title--h5 timeline__title">SMP BU NU Jatirokeh of Brebes
                                             </h5>
-                                            <span class="timeline__period">2003 — 2005</span>
-                                            <p class="timeline__description">Duis aute irure dolor in reprehenderit in
-                                                voluptate, quila voluptas mag odit aut fugit, sed consequuntur magni
-                                                dolores eos.</p>
+                                            <span class="timeline__period">2008 — 2011</span>
+                                            <p class="timeline__description">
+                                                in this school I studied science and theology of Islam.
+                                            </p>
+                                        </article>
+
+                                        <article class="timeline__item">
+                                            <h5 class="title title--h5 timeline__title">SMP BU NU Jatirokeh of Brebes
+                                            </h5>
+                                            <span class="timeline__period">2008 — 2011</span>
+                                            <p class="timeline__description">
+                                                in this school I studied science and theology of Islam.
+                                            </p>
                                         </article>
                                     </div>
                                 </div>
@@ -169,31 +180,36 @@
                                     <h2 class="title title--h3"><img class="title-icon"
                                             src="assets/icons/icon-experience.svg" alt="" /> Experience</h2>
                                     <div class="timeline">
-                                        <!-- Item -->
                                         <article class="timeline__item">
-                                            <h5 class="title title--h5 timeline__title">Creative Director</h5>
-                                            <span class="timeline__period">2015 — Present</span>
-                                            <p class="timeline__description">Nemo enim ipsam voluptatem blanditiis
-                                                praesentium voluptum delenit atque corrupti, quos dolores et qvuas
-                                                molestias exceptur.</p>
+                                            <h5 class="title title--h5 timeline__title">Fullstack Developer</h5>
+                                            <span class="timeline__period">3 months</span>
+                                            <p class="timeline__description">
+                                                at CV. Gemilang Makmur Santos
+                                            </p>
                                         </article>
 
-                                        <!-- Item -->
                                         <article class="timeline__item">
-                                            <h5 class="title title--h5 timeline__title">Art Director</h5>
-                                            <span class="timeline__period">2013 — 2015</span>
-                                            <p class="timeline__description">Nemo enims ipsam voluptatem, blanditiis
-                                                praesentium voluptum delenit atque corrupti, quos dolores et quas
-                                                molestias exceptur.</p>
+                                            <h5 class="title title--h5 timeline__title">Fullstack Developer</h5>
+                                            <span class="timeline__period">2 months</span>
+                                            <p class="timeline__description">
+                                                at Bank Jateng
+                                            </p>
                                         </article>
 
-                                        <!-- Item -->
                                         <article class="timeline__item">
-                                            <h5 class="title title--h5 timeline__title">Web Designer</h5>
-                                            <span class="timeline__period">2010 — 2013</span>
-                                            <p class="timeline__description">Nemo enims ipsam voluptatem, blanditiis
-                                                praesentium voluptum delenit atque corrupti, quos dolores et quas
-                                                molestias exceptur.</p>
+                                            <h5 class="title title--h5 timeline__title">Game Developer</h5>
+                                            <span class="timeline__period">2 months</span>
+                                            <p class="timeline__description">
+                                                at BPMPK-KEMDIKBUD
+                                            </p>
+                                        </article>
+
+                                        <article class="timeline__item">
+                                            <h5 class="title title--h5 timeline__title">Web Developer</h5>
+                                            <span class="timeline__period">n/a</span>
+                                            <p class="timeline__description">
+                                                accept offers to create web applications for the Police
+                                            </p>
                                         </article>
                                     </div>
                                 </div>
