--- a/index.html
+++ b/index.html
@@ -134,8 +134,10 @@
                         <div class="pb-0">
                             <div class="row">
                                 <div class="col-12 col-lg-6">
-                                    <h2 class="title title--h3"><img class="title-icon"
-                                            src="assets/icons/icon-education.svg" alt="" /> Education</h2>
+                                    <h2 class="title title--h3">
+                                        <img class="title-icon" src="assets/icons/icon-education.svg" alt="" />
+                                        Education
+                                    </h2>
                                     <div class="timeline">
                                         <article class="timeline__item">
                                             <h5 class="title title--h5 timeline__title">
@@ -166,13 +168,52 @@
                                         </article>
 
                                         <article class="timeline__item">
-                                            <h5 class="title title--h5 timeline__title">SMP BU NU Jatirokeh of Brebes
+                                            <h5 class="title title--h5 timeline__title">SDN 1 Kandang of Pemalang
                                             </h5>
-                                            <span class="timeline__period">2008 — 2011</span>
+                                            <span class="timeline__period">2002 — 2008</span>
                                             <p class="timeline__description">
-                                                in this school I studied science and theology of Islam.
+                                                in this school I studied basic science.
                                             </p>
                                         </article>
+                                        <hr>
+                                        <h2 class="title title--h3">
+                                            Non Formal
+                                        </h2>
+
+                                        <article class="timeline__item">
+                                            <h5 class="title title--h5 timeline__title">Dicoding Academy</h5>
+                                            <span class="timeline__period">3 couses</span>
+                                            <p class="timeline__description">
+                                                <ul>
+                                                    <li>
+                                                        <a href="https://www.dicoding.com/academies/123">
+                                                            Belajar Dasar Pemrograman Web
+                                                        </a>
+                                                    </li>
+                                                    <li>
+                                                        <a href="https://www.dicoding.com/academies/51">
+                                                            Belajar Membuat Aplikasi Android untuk Pemula
+                                                        </a>
+                                                    </li>
+                                                    <li>
+                                                        <a href="https://www.dicoding.com/academies/14">
+                                                            Menjadi Android Developer Expert
+                                                        </a>
+                                                    </li>
+                                                </ul>
+                                            </p>
+                                        </article>
+
+                                        <article class="timeline__item">
+                                            <h5 class="title title--h5 timeline__title">Udemy Course</h5>
+                                            <span class="timeline__period">many couses</span>
+                                            <p class="timeline__description">
+                                                <a href="https://www.udemy.com/user/shandy-siswandi/">
+                                                    Lists my courses
+                                                </a>
+                                            </p>
+                                        </article>
+
                                     </div>
                                 </div>
 
@@ -206,9 +247,25 @@
 
                                         <article class="timeline__item">
                                             <h5 class="title title--h5 timeline__title">Web Developer</h5>
-                                            <span class="timeline__period">n/a</span>
+                                            <span class="timeline__period">n/a - projects</span>
                                             <p class="timeline__description">
                                                 accept offers to create web applications for the Police
+                                            </p>
+                                        </article>
+
+                                        <article class="timeline__item">
+                                            <h5 class="title title--h5 timeline__title">Android Developer</h5>
+                                            <span class="timeline__period">n/a - projects</span>
+                                            <p class="timeline__description">
+                                                accept offers to create android app for the school
+                                            </p>
+                                        </article>
+
+                                        <article class="timeline__item">
+                                            <h5 class="title title--h5 timeline__title">Web Developer</h5>
+                                            <span class="timeline__period">n/a - projects</span>
+                                            <p class="timeline__description">
+                                                accept offers to create web applications for the student
                                             </p>
                                         </article>
                                     </div>
@@ -222,25 +279,24 @@
                                 <div class="col-12">
                                     <h2 class="title title--h3">Coding Skills</h2>
                                     <div class="box box__second">
-                                        <!-- Progress -->
                                         <div class="progress">
-                                            <div class="progress-bar" role="progressbar" aria-valuenow="70"
+                                            <div class="progress-bar" role="progressbar" aria-valuenow="40"
                                                 aria-valuemin="0" aria-valuemax="100">
-                                                <div class="progress-text"><span>WordPress</span><span>70%</span></div>
+                                                <div class="progress-text"><span>Unity / C# Game
+                                                        Development</span><span>40%</span></div>
                                             </div>
-                                            <div class="progress-text"><span>WordPress</span></div>
+                                            <div class="progress-text"><span>Unity / C# Game Development</span></div>
                                         </div>
 
-                                        <!-- Progress -->
                                         <div class="progress">
-                                            <div class="progress-bar" role="progressbar" aria-valuenow="70"
+                                            <div class="progress-bar" role="progressbar" aria-valuenow="60"
                                                 aria-valuemin="0" aria-valuemax="100">
-                                                <div class="progress-text"><span>Javascript</span><span>70%</span></div>
+                                                <div class="progress-text"><span>Node
+                                                        Javascript</span><span>60%</span></div>
                                             </div>
-                                            <div class="progress-text"><span>Javascript</span></div>
+                                            <div class="progress-text"><span>Node Javascript</span></div>
                                         </div>
 
-                                        <!-- Progress -->
                                         <div class="progress">
                                             <div class="progress-bar" role="progressbar" aria-valuenow="100"
                                                 aria-valuemin="0" aria-valuemax="100">
@@ -249,13 +305,28 @@
                                             <div class="progress-text"><span>HTML</span></div>
                                         </div>
 
-                                        <!-- Progress -->
                                         <div class="progress">
-                                            <div class="progress-bar" role="progressbar" aria-valuenow="30"
+                                            <div class="progress-bar" role="progressbar" aria-valuenow="65"
                                                 aria-valuemin="0" aria-valuemax="100">
-                                                <div class="progress-text"><span>PHP</span><span>30%</span></div>
+                                                <div class="progress-text"><span>CSS</span><span>65%</span></div>
+                                            </div>
+                                            <div class="progress-text"><span>CSS</span></div>
+                                        </div>
+
+                                        <div class="progress">
+                                            <div class="progress-bar" role="progressbar" aria-valuenow="90"
+                                                aria-valuemin="0" aria-valuemax="100">
+                                                <div class="progress-text"><span>PHP</span><span>90%</span></div>
                                             </div>
                                             <div class="progress-text"><span>PHP</span></div>
+                                        </div>
+
+                                        <div class="progress">
+                                            <div class="progress-bar" role="progressbar" aria-valuenow="75"
+                                                aria-valuemin="0" aria-valuemax="100">
+                                                <div class="progress-text"><span>Java</span><span>75%</span></div>
+                                            </div>
+                                            <div class="progress-text"><span>Java</span></div>
                                         </div>
                                     </div>
                                 </div>
