--- a/404.html
+++ b/404.html
@@ -1,11 +1,39 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>SHANDY SISWANDI | 404 Page</title>
-  </head>
-  <body>
-    <h1>Not Found | code 404</h1>
-  </body>
+
+<head>
+  <meta charset="utf-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+
+  <meta name="description" content="portfolio, portofolio, portfolio shandy siswandi, portofolio shandy siswandi" />
+  <meta name="keywords" content="SHANDY SISWANDI, SHANDY, SISWANDI, shandysiswandi, SHANDYSISWANDI" />
+  <meta name="author" content="shandysiswandi" />
+
+  <title>SHANDY SISWANDI | Not Found page</title>
+
+  <link rel="shortcut icon" href="/images/icon.png" />
+
+  <style>
+    body {
+      background-color: #20babc;
+    }
+
+    #chapter1 {
+      background-image: url(/images/404.png);
+      background-repeat: no-repeat;
+      background-size: 100% auto;
+      background-position: center;
+      background-attachment: fixed;
+    }
+  </style>
+</head>
+
+<body id="chapter1">
+
+  <script>
+    document.addEventListener('click', () => window.location = "http://shandysiswandi.github.io/");
+  </script>
+</body>
+
 </html>
