--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
 	<link href="https://fonts.googleapis.com/css?family=Quicksand:300,400,500,700" rel="stylesheet" />
 	<link href="https://fonts.googleapis.com/css?family=Playfair+Display:400,400i,700" rel="stylesheet" />
 
+	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
 	<link rel="stylesheet" href="/css/animate.css" />
 	<link rel="stylesheet" href="/css/icomoon.css" />
-	<link rel="stylesheet" href="/css/bootstrap.css" />
 	<link rel="stylesheet" href="/css/style.css" />
 
 	<!-- Modernizr JS -->
@@ -859,9 +859,11 @@
 	</div>
 
 	<!-- script -->
-	<script src="/js/jquery.min.js"></script>
+	<script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"></script>
+	<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"></script>
+	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
+
 	<script src="/js/jquery.easing.1.3.js"></script>
-	<script src="/js/bootstrap.min.js"></script>
 	<script src="/js/jquery.waypoints.min.js"></script>
 	<script src="/js/main.js"></script>
 </body>
