--- a/404.html
+++ b/404.html
@@ -1,39 +1,124 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="no-js">
 
 <head>
-  <meta charset="utf-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
 
-  <meta name="description" content="portfolio, portofolio, portfolio shandy siswandi, portofolio shandy siswandi" />
-  <meta name="keywords" content="SHANDY SISWANDI, SHANDY, SISWANDI, shandysiswandi, SHANDYSISWANDI" />
-  <meta name="author" content="shandysiswandi" />
+  <meta name="description" content="BreezyCV - Resume / CV / vCard Template" />
+  <meta name="keywords" content="vcard, resposnive, retina, resume, jquery, css3, bootstrap, Material CV, portfolio" />
+  <meta name="author" content="lmpixels" />
 
-  <title>SHANDY SISWANDI | Not Found page</title>
+  <title>SHANDY SISWANDI | 404 PAGE</title>
+  <link rel="icon" type="image/png" href="favicon.png">
 
-  <link rel="shortcut icon" href="/images/icon.png" />
+  <link rel="stylesheet" type="text/css" href="css/reset.css">
+  <link rel="stylesheet" type="text/css" href="css/bootstrap-grid.min.css">
+  <link rel="stylesheet" type="text/css" href="css/animations.css">
+  <link rel="stylesheet" type="text/css" href="css/perfect-scrollbar.css">
+  <link rel="stylesheet" type="text/css" href="css/owl.carousel.css">
+  <link rel="stylesheet" type="text/css" href="css/magnific-popup.css">
+  <link rel="stylesheet" type="text/css" href="css/main.css">
 
-  <style>
-    body {
-      background-color: #20babc;
-    }
-
-    #chapter1 {
-      background-image: url(/images/404.png);
-      background-repeat: no-repeat;
-      background-size: 100% auto;
-      background-position: center;
-      background-attachment: fixed;
-    }
-  </style>
+  <script src="js/modernizr.custom.js"></script>
 </head>
 
-<body id="chapter1">
+<body>
+  <div class="lm-animated-bg" style="background-image: url(images/cat.jpg);"></div>
 
-  <script>
-    document.addEventListener('click', () => window.location = "http://shandysiswandi.github.io/");
-  </script>
+  <div class="preloader">
+    <div class="preloader-animation">
+      <div class="preloader-spinner">
+      </div>
+    </div>
+  </div>
+
+  <div class="page" style="opacity: 0.5;">
+    <div class="page-content">
+      <header id="site_header" class="header mobile-menu-hide">
+        <div class="header-content">
+          <div class="header-photo">
+            <img src="images/me-360.jpg" alt="Alex Smith">
+          </div>
+          <div class="header-titles">
+            <h2>Shandy Siswandi</h2>
+            <h4>{ Backend | Mobile | Frontend }</h4>
+          </div>
+        </div>
+
+        <ul class="main-menu" style="display: none;">
+          <li class="active">
+            <a href="#home" class="nav-anim">
+              <span class="menu-icon lnr lnr-home"></span>
+              <span class="link-text">Home</span>
+            </a>
+          </li>
+        </ul>
+
+        <div class="social-links">
+          <ul>
+            <li>
+              <a href="https://twitter.com/shandysiswandis" target="_blank"><i class="fab fa-twitter"></i></a>
+            </li>
+            <li>
+              <a href="https://facebook.com/shandysiswandi" target="_blank"><i class="fab fa-facebook"></i></a>
+            </li>
+            <li>
+              <a href="https://www.youtube.com/channel/UCDuGQfSZU7EtWTWoFXX4MYg" target="_blank">
+                <i class="fab fa-youtube"></i>
+              </a>
+            </li>
+            <li>
+              <a href="https://www.instagram.com/shandysiswandi/" target="_blank"><i class="fab fa-instagram"></i></a>
+            </li>
+            <li>
+              <a href="https://www.linkedin.com/in/shandy-siswandi-33b901180/" target="_blank">
+                <i class="fab fa-linkedin"></i>
+              </a>
+            </li>
+          </ul>
+        </div>
+
+        <div class="copyrights">© 2020 All rights reserved.</div>
+      </header>
+
+      <div class="content-area">
+        <div class="animated-sections">
+          <section data-id="home" class="animated-section start-page">
+            <div class="section-content vcentered">
+              <div class="row">
+                <div class="col-sm-12 col-md-12 col-lg-12">
+                  <div class="title-block">
+                    <h2 class="h2-full">{ Not Found : 404 }</h2>
+                    <h2 class="h2-min">
+                      Not Found
+                      404
+                    </h2>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </section>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <script src="js/jquery-2.1.3.min.js"></script>
+  <script src="js/modernizr.custom.js"></script>
+  <script src="js/animating.js"></script>
+
+  <script src="js/imagesloaded.pkgd.min.js"></script>
+
+  <script src='js/perfect-scrollbar.min.js'></script>
+  <script src='js/jquery.shuffle.min.js'></script>
+  <script src='js/masonry.pkgd.min.js'></script>
+  <script src='js/owl.carousel.min.js'></script>
+  <script src="js/jquery.magnific-popup.min.js"></script>
+
+  <script src="js/validator.js"></script>
+  <script src="js/main.js"></script>
 </body>
 
 </html>
